foundation-objs/main/default/objects/Qualifications_Questionnaire__c/Qualifications_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Qualifications Questionnaire</label>
    <nameField>
        <displayFormat>QQ-{0000}</displayFormat>
        <label>Qualifications Questionnaire Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualifications Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>