foundation-objs/main/default/objects/Qualifications_Questionnaire__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Qualifications Questionnaires</relationshipLabel>
    <relationshipName>Qualifications_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>