foundation-objs/main/default/objects/Qualifications_Questionnaire__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Qualifications Questionnaires</relationshipLabel>
    <relationshipName>Qualifications_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>