foundation-objs/main/default/objects/Qualifications_Questionnaire__c/fields/Parent_Questionnaires__c.field-meta.xml
<CustomField>
    <fullName>Parent_Questionnaires__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Questionnaires</label>
    <referenceTo>Qualifications_Questionnaire__c</referenceTo>
    <relationshipLabel>Parent Questionnaires</relationshipLabel>
    <relationshipName>Parent_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>