foundation-objs/main/default/objects/Qualifications_Questionnaire__c/fields/Question_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Question_Related_To__c</fullName>
    <inlineHelpText>Question Should be related to Account or Opportunity</inlineHelpText>
    <label>Question Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>