foundation-objs/main/default/objects/Qualifications_Questionnaire__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <label>Questionnaire</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>