foundation-objs/main/default/objects/Qualifications_Questionnaire__c/recordTypes/Master_Record.recordType-meta.xml
<RecordType>
    <fullName>Master_Record</fullName>
    <active>true</active>
    <label>Master Record</label>
</RecordType>