foundation-objs/main/default/objects/Qualifications_Questionnaire__c/recordTypes/Record_Specific.recordType-meta.xml
<RecordType>
    <fullName>Record_Specific</fullName>
    <active>true</active>
    <label>Record Specific</label>
</RecordType>