foundation-objs/main/default/objects/Qualifications_Questionnaire__c/listViews/Master_Questionnaires.listView-meta.xml
<ListView>
    <fullName>Master_Questionnaires</fullName>
    <columns>NAME</columns>
    <columns>Questionnaire__c</columns>
    <columns>Question_Related_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Qualifications_Questionnaire__c.Master_Record</value>
    </filters>
    <label>Master Questionnaires</label>
</ListView>